--- a/letter/templates/letter/show_delete_list.html
+++ b/letter/templates/letter/show_delete_list.html
@@ -1,33 +1,68 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
-<body>
-<h2> {{ nickname}}Trash List</h2>
-{% if messages %}
-	{% for message in messages %}
-        <script>
-            alert('{{ message }}');
-        </script>
-	{% endfor %}
-    {% endif %}
-<table>
-<tr>
-    <td>Idx</td>
-    <td>Sender</td>
-    <td>Contents&nbsp;&nbsp;&nbsp;</td>
-    <td>SendDate</td>
-</tr>
-<p>{{page}} 삭제 목록</p>
-<table>
-   
-{% for col in result %}
-    <tr onclick="location.href='/letter/{{page}}/detail/{{ col.letterId }}/'"">
-        <td>{{col.letterId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{col.senderId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{col.content}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{col.sendDate}}</td>
-    </tr>
-{% endfor %}
-</table>
-<a href="{% url 'accounts:Index' %}"><button>메인화면</button>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
+        {% if messages %}
+        {% for message in messages %}
+            <script>
+                alert('{{ message }}');
+            </script>
+        {% endfor %}
+        {% endif %}
+        <h2> {{ nickname}}'s Trash List</h2>
+    </head>
+    <body>
+        <div class="d-block">
+            {% include "letter/navbar.html" %}
+        </div>
+     <div class="container-md vh-100 d-flex align-items-center col justify-content-center">
+            <div class="col-auto" >
+        <table>
+            <table class="table table-hover">
+                    <thead>
+                        <tr>
+                        <th scope="col">Idx</td>
+                        <th scope="col">emotion</td>
+                        <th scope="col">Sender</td>
+                        <th scope="col">Contents</td>
+                        <th scope="col">SendDate</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for col in result %}
+                    <tr onclick="location.href='/letter/{{page}}/detail/{{ col.letterId }}/'"">
+                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.letterId}}&nbsp;&nbsp;&nbsp;</td>
+                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">
+                            {% if col.emotion >= 62 and col.emotion <= 100  %}
+                        
+                            <object data="{% static 'assets/smile.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                            {% elif col.emotion >= 37 and col.emotion < 62 %}
+                              
+                                <object data="{% static 'assets/middle.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                            {% elif col.emotion > 0 and col.emotion < 37 %}
+                            
+                                <object data="{% static 'assets/thinking.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                            {% else %}
+                                에러
+                            {% endif %}
+                        </td>
+                        
+                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.senderId}}&nbsp;&nbsp;&nbsp;</td>
+                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.content}}&nbsp;&nbsp;&nbsp;</td>
+                        <td onClick="location.href='/letter/receive/detail/{{ coll.letterId }}/'">{{col.sendDate | date:"Y.m.d H:i "}}</td>
+                        <td onClick="location.href='/letter/delreceive/{{col.letterId}}/'"">
+                            <object data="{% static 'assets/trash.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                        </td>
+                    </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+
+    <a href="{% url 'accounts:Index' %}"><button>메인화면</button>
 </body>
 </html>
