--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -1,17 +1,37 @@
-<h2 style="text-align:center;">비밀번호 변경</h2>
-<!-- {% if error_message %}
-<p><strong>{{ error_message }}</strong></p>
-{% endif %} -->
-{% if messages %}
-	{% for message in messages %}
-        <script>
-            alert('{{ message }}');
-        </script>
-	{% endfor %}
-{% endif %}
+{% include "letter/navbar.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>To, morrow</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
+</head>
+<body>
+    <h2 style="text-align:center;">비밀번호 변경</h2>
+    <!-- {% if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+    {% endif %} -->
+    {% if messages %}
+      {% for message in messages %}
+            <script>
+                alert('{{ message }}');
+            </script>
+      {% endfor %}
+    {% endif %}
+    
+    <form method="post" style="text-align:center;">
+      {% csrf_token %}
+      <div class="container mt-lg-4">
+        <div class="w-25 text-center mx-auto">
+          {{ password_change_form }}
+        </div>
+        <div class="justify-content-center">
+          <button type="submit"  class="btn btn-primary mx-auto d-block mt-lg-2">비밀번호 변경</button>
+        </div>
+    </div>
+      
+      
+    </form>
 
-<form method="post" style="text-align:center;">
-  {% csrf_token %}
-  {{ password_change_form }}
-  <button type="submit">Save changes</button>
-</form>
+</body>
+</html>
