--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -1,4 +1,3 @@
-
 {% include "letter/navbar.html" %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,8 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
 </head>
 <body>
-    <h1>User Edit</h1>
-
     {% if messages %}
         {% for message in messages %}
             <script>
@@ -21,10 +18,18 @@
     
     <form method="POST">
         {% csrf_token %}
-        
-        {{ update_form.as_p }}
-        <input type="submit" value="Submit"/>
+        <div class="container mt-lg-4">
+            <h3 class="text-center">정보 수정</h3>
+            <div class="w-25 text-center mx-auto">
+                {{ update_form.as_p }}
+            </div>
+            <div class="justify-content-center">
+                <input class="btn btn-primary mx-auto d-block mt-lg-2" type="submit" value="수정"/>      
+            </div>
+        </div>
     </form>
+    <a href="{% url 'accounts:password' %}"><button class="btn btn-primary mx-auto d-block mt-lg-2">비밀번호 수정</button></a>
+    <a href="{% url 'accounts:Index' %}"><button class="btn btn-primary mx-auto d-block mt-lg-2">메인화면</button> </a> 
 
 </body>
 </html>
