fix update form

--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -24,12 +24,11 @@
                 {{ update_form.as_p }}
             </div>
             <div class="justify-content-center">
-                <input class="btn btn-primary mx-auto d-block mt-lg-2" type="submit" value="수정"/>      
+                <input class="btn btn-primary mx-auto d-block mt-lg-2" type="submit" value="수정 완료"/>      
             </div>
         </div>
     </form>
-    <a href="{% url 'accounts:password' %}"><button class="btn btn-primary mx-auto d-block mt-lg-2">비밀번호 수정</button></a>
-    <a href="{% url 'accounts:Index' %}"><button class="btn btn-primary mx-auto d-block mt-lg-2">메인화면</button> </a> 
+    <a href="{% url 'accounts:Index' %}"><button class="btn btn-primary mx-auto d-block mt-lg-3 mb-lg-2">메인화면</button> </a> 
 
 </body>
 </html>
