--- a/letter/templates/letter/writeToMe.html
+++ b/letter/templates/letter/writeToMe.html
@@ -26,19 +26,18 @@
                     <h1>To, morrow To, You</h1>
                     <div class="form-group">
                     <label for="Content" class="form-label mt-4">내일의 당신에게 하고싶은 말</label>
-                    <textarea class="form-control" id="exampleTextarea" rows="10" value={{ write_form.content }}></textarea>
+                    <textarea class="form-control" id="exampleTextarea" rows="10" value={{ write_form.content }}</textarea>
                     </div>
                     <div class="form-group">
                     미래의 {{write_form.receiveDate}} 이 날,
                     미래의 {{write_form.receiveTime}} 이 시간에 봐요.
                     </div>
-        <center><br><br>
-        <button type="submit" class="btn btn-primary">미래의 나에게</button>
-        </center>
-        </div>
-        </div>
+                    <center><br><br>
+                    <button type="submit" class="btn btn-primary">미래의 나에게</button>
+                    </center> 
+                </div>
+            </div>
         <div>
     </form>
-
 </body>
 </html>
