--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -1,33 +1,75 @@
-<h2>Index 페이지 </h2>
-{% if messages %}
-   {% for message in messages %}
-        <script>
-            alert('{{ message }}');
-        </script>
-   {% endfor %}
-{% endif %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>To, morrow</title>
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <!-- <link href="css/styles.css" rel="stylesheet" /> -->
+    </head>
+    <body>
+        <div class="masthead">
+            <div class="masthead-content text-white" style="color:white">
+                <div class="container-fluid px-4 px-lg-0" style="color: blue">
+                    <h1 class="fst-italic lh-1 mb-4">To, morrow</h1>
+                    <p class="mb-5">미래의 당신, 미래의 누군가에게 편지를 보내세요.</p>
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- * * SB Forms Contact Form * *-->
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- This form is pre-integrated with SB Forms.-->
+                    <!-- To make this form functional, sign up at-->
+                    <!-- https://startbootstrap.com/solution/contact-forms-->
+                    <!-- to get an API token!-->
+                 
+                        <!-- Email address input-->
 
+                    
+                    {% if user.is_active %} 
+                          <div>
+                            <a href="{% url 'letter:letterFrmMe' %}"><button class="btn btn-outline-primary">Main</button></a>
+                        </div>
+                    {% else %}
+                        <div>
+                         <a href="{% url 'accounts:login' %}"><button class="btn btn-outline-primary">Login</button></a>
+                        <a href="{% url 'accounts:signup' %}"><button class="btn btn-outline-primary">Join with us!</button></a>
+                        </div>
+                    {% endif%}
 
-{% if user.is_active %} 
-    로그인 상태
-    <p>Welcome, <b>{{ user.name }}. </b>Thanks for logging in.</p>
-<li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
-<li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li><br>
-
-<li><a href="{% url 'letter:writeToMe' %}"> 나에게 편지쓰러가기  </a></li>
-<li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li><br>
-
-<li><a href="{% url 'letter:letterFrmMe' %}"> 나에게 쓴 편지 목록  </a></li>
-<li><a href="{% url 'letter:letterFrmOthers' %}"> 타인에게 받은 편지 목록  </a></li><br>
-
-<li><a href="{% url 'letter:letterIsent' %}"> 내가 보낸 편지 목록  </a></li> <br>
-
-<li><a href="/letter/trash/send"> 내가 보낸 편지 쓰레기통 </a></li>
-<li><a href="/letter/trash/receive"> 내가 받은 편지 쓰레기통  </a></li>
-
-{% else %} 
-    로그아웃 상태
-    <li><a href="{% url 'accounts:signup' %}">  회원가입 </a></li>
-    <li><a href="{% url 'accounts:login' %}">  로그인 </a></li>
-    <li><a href="{% url 'password_reset' %}"> 비밀번호 찾기 </a></li>
-{% endif %}
+                   
+                        <!-- Submit success message-->
+                        <!---->
+            
+                        <!---->
+                        <!-- This is what your users will see when there is-->
+                        <!-- an error submitting the form-->
+                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
+            
+                </div>
+            </div>
+        </div>
+        <!-- Social Icons-->
+        <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
+        
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="{% static 'js/scripts.js'%}"></script>
+        <!-- <script src="js/scripts.js"></script> -->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
+</html>
