--- a/letter/templates/letter/writeToOthers.html
+++ b/letter/templates/letter/writeToOthers.html
@@ -25,7 +25,7 @@
                     <h1>To, morrow To, Others</h1>
                     <div class="form-group">
                         <label for="Content" class="form-label mt-4">내일의 누군가에게 하고싶은 말</label>
-                        <textarea class="form-control" id="exampleTextarea" rows="10" value={{ write_form.content }}></textarea>
+                        <textarea class="form-control" id="exampleTextarea" rows="10" value={{ write_form.content }}</textarea>
                     </div>
                     <div class="form-check">
                         <label class="form-check-label">
