--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
 </head>
 <body>
-    <h2 style="text-align:center;">비밀번호 변경</h2>
+    <h3 class="mt-lg-3" style="text-align:center;">비밀번호 변경</h3>
     <!-- {% if error_message %}
     <p><strong>{{ error_message }}</strong></p>
     {% endif %} -->
