--- a/letter/templates/letter/navbar.html
+++ b/letter/templates/letter/navbar.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="collapse navbar-collapse mx-auto order-last">
-        <a class="navbar-brand mx-auto" href="#">To, morrow</a>
+        <a class="navbar-brand mx-auto" href="{% url 'letter:letterFrmMe' %}">To, morrow</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
             <span class="navbar-toggler-icon"></span>
         </button>
