--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -20,47 +20,23 @@
     </head>
     <body>
         <div class="masthead">
-            <div class="masthead-content text-white" style="color:white">
-                <div class="container-fluid px-4 px-lg-0" style="color: blue">
+            <div class="masthead-content text-white">
+                <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">To, morrow</h1>
                     <p class="mb-5">미래의 당신, 미래의 누군가에게 편지를 보내세요.</p>
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                 
-                        <!-- Email address input-->
-
-                    
                     {% if user.is_active %} 
-                          <div>
+                        <div>
                             <a href="{% url 'letter:letterFrmMe' %}"><button class="btn btn-outline-primary">Main</button></a>
                         </div>
                     {% else %}
                         <div>
-                         <a href="{% url 'accounts:login' %}"><button class="btn btn-outline-primary">Login</button></a>
-                        <a href="{% url 'accounts:signup' %}"><button class="btn btn-outline-primary">Join with us!</button></a>
+                        <a href="{% url 'accounts:login' %}"><button class="btn btn-outline-primary" style="color:grey">Login</button></a>
+                        <a href="{% url 'accounts:signup' %}"><button class="btn btn-outline-primary" style="color:grey">Join with us!</button></a>
                         </div>
                     {% endif%}
-
-                   
-                        <!-- Submit success message-->
-                        <!---->
-            
-                        <!---->
-                        <!-- This is what your users will see when there is-->
-                        <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-            
                 </div>
             </div>
         </div>
-        <!-- Social Icons-->
-        <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
-        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
